updateForum updated and swagger documentation added
